--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
            	   	  	  	<td>
            	   	  	  		<p>
            	   	  	  			<font face="arial" size="3" color="#c2c0c3">
-           	   	  	  			Hey peeps! My name is Ishmeet Singh. I'm a Rising Star from Punjab (My Hometown). Interested in coding when I was 12 Years Old. My Birthday is on 16th November, 2007. Deeply Interested in Back-End Programming Languages like Java, C#, C++, Python, etc. "When you're learning something with Interest, you can definitely achieve it" - Ishmeet Singh.
+           	   	  	  			Hey peeps! My name is Ishmeet Singh. I'm a Rising Star from Punjab (My Hometown). Deeply Interested in Back-End Programming Languages like Java, C#, C++, Python, etc. "When you're learning something with Interest, you can definitely achieve it" - Ishmeet Singh.
            	   	  	  		</font>
            	   	  	  		</p>
            	   	  	  		<p>
