--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
            	   	  	  		<p>
 <br>
            	   	  	  			<font face="arial" size="3" color="#c2c0c3">
-           	   	  	  			When I got to know about all the programming languages, I chose Backend Programming. After this, I got to know about Python (A programming language) which is very easy and usefull. Then, I got to know about the <i><a href="https://www.youtube.com/c/CodeWithHarry">CodeWithHarry<a></i> YouTube Channel. I saw a video named <i><a href="https://www.youtube.com/watch?v=gfDE2a7MKjA">Python Full Course with Notes<a></i> and then I saw it. It was a course of 13-15 Hours. And this man made all my concepts clear about Programming. So, if you are a begineer in programing, you should go and check out his channel on YouTube.
+           	   	  	  			When I got to know about all the programming languages, I chose Backend Programming. After this, I got to know about Python (A programming language) which is very easy and usefull. Then, I got to know about the <i><a href="https://www.youtube.com/c/CodeWithHarry">CodeWithHarry<a></i> YouTube Channel. I saw a video named <i><a href="https://www.youtube.com/watch?v=gfDE2a7MKjA">Python Full Course with Notes<a></i> and then I watched it. It was a course of around 13-15 Hours. And trust me, this man made all my concepts and doubts clear about Programming. So, if you are a begineer in programing, you must check out his channel on YouTube.
            	   	  	  		</font>
            	   	  	  		</p>
            	   	  	  		<p>
