--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
            	   	  	  <tr>
            	   	  	  	 <td height="40">
            	   	  	  	 	<font face="arial" size="5" color=" #ffffff">
-           	   	  	  	    CodeWithHarry (A YouTuber)
+           	   	  	  	    <i><a href="https://www.codewithharry.com/">CodeWithHarry<a></i> (A YouTuber)
            	   	  	  	    </font>
            	   	  	  	</td>
            	   	  	  </tr>
